airs\refac(doc): #3177.11 native eng improvement
- New changes suggested by Santaularia were applied.


Former-commit-id: 25dd59a9e58ed66a0bda0dd8ac06b80307190d5a

--- a/airs/content/blog/attack-no-announce/index.adoc
+++ b/airs/content/blog/attack-no-announce/index.adoc
@@ -6,7 +6,7 @@
 :image: cover.png
 :alt: Executive leaking business information
 :description: We want to guide you about some management policies we suggest that you could take to answer with high precision how secure your information is.
-:keywords: Bussiness, Information, Security, Policy, Protection, Hacking, Best Practices,Ethical Hacking, Pentesting
+:keywords: Business, Information, Security, Policy, Protection, Hacking, Best Practices,Ethical Hacking, Pentesting
 :author: Jonathan Armas
 :writer: johna
 :name: Jonathan Armas
