--- a/airs/content/blog/ceo-bugs/index.adoc
+++ b/airs/content/blog/ceo-bugs/index.adoc
@@ -6,7 +6,7 @@
 :image: cover.png
 :alt: Broken blue ceramic plate on Unsplash: https://unsplash.com/photos/WdJkXFQ4VHY
 :description: Software quality management, including security weaknesses, has become of strategic relevance. Here we discuss an article calling for CEOs' attention to bugs.
-:keywords: Bussiness, CEO, Security, Bugs, Software, Information, Ethical Hacking, Pentesting
+:keywords: Business, CEO, Security, Bugs, Software, Information, Ethical Hacking, Pentesting
 :author: Julian Arango
 :writer: jarango
 :name: Julian Arango
