--- a/airs/content/blog/oscp-journey/index.adoc
+++ b/airs/content/blog/oscp-journey/index.adoc
@@ -6,7 +6,7 @@
 :image: cover.png
 :alt: Man sitting facing laptop. Photo by Clint Patterson on Unsplash: https://unsplash.com/photos/dYEuFB8KQJk
 :description: The OSCP exam is one of the hardest certifications out there for pentesters. Here we show you how you can prepare yourself to do your best on it.
-:keywords: OSCP, Bussiness, Information, Security, Protection, Hacking, Best Practices, Ethical Hacking, Pentesting
+:keywords: OSCP, Business, Information, Security, Protection, Hacking, Best Practices, Ethical Hacking, Pentesting
 :author: Jonathan Armas
 :writer: johna
 :name: Jonathan Armas
