--- a/airs/content/blog/vulnserver-gter/index.adoc
+++ b/airs/content/blog/vulnserver-gter/index.adoc
@@ -6,7 +6,7 @@
 :image: cover.png
 :alt: Photo by Annie Spratt on Unsplash
 :description: This post will describe the steps taken to exploit the Vulnserver GTER command, using a technique called 'Egghunting.'
-:keywords: Bussiness, Information, Security, Protection, Hacking, Exploit, OSCE, Ethical Hacking, Pentesting
+:keywords: Business, Information, Security, Protection, Hacking, Exploit, OSCE, Ethical Hacking, Pentesting
 :author: Andres Roldan
 :writer: aroldan
 :name: Andres Roldan
