--- a/airs/content/blog/vulnserver-trun/index.adoc
+++ b/airs/content/blog/vulnserver-trun/index.adoc
@@ -6,7 +6,7 @@
 :image: cover.png
 :alt: Photo by David Rangel on Unsplash
 :description: This post will describe the steps taken to exploit the Vulnserver TRUN command using a direct EIP overwrite strategy.
-:keywords: Bussiness, Information, Security, Protection, Hacking, Exploit, OSCE, Ethical Hacking, Pentesting
+:keywords: Business, Information, Security, Protection, Hacking, Exploit, OSCE, Ethical Hacking, Pentesting
 :author: Andres Roldan
 :writer: aroldan
 :name: Andres Roldan
