--- a/airs/content/pages/products/rules/list/data/329/index.adoc
+++ b/airs/content/pages/products/rules/list/data/329/index.adoc
@@ -15,13 +15,13 @@ device unencrypted storage, etc.).
 
 == Description
 
-Data placed in the *localStorage* persists after a session is closed;
-thus, any actor with access to the browser will be able to obtain it.
-Furthermore, data in the *localStorage* or in the *sessionStorage* is visible to
-scripts that are running on the browser,
+Data placed in the *localStorage* persists after a session is closed
+and thus, any actor with access to the browser will be able to obtain it.
+Furthermore, data in the *localStorage* or in the *sessionStorage*
+is visible to scripts that are running on the browser,
 and these scripts could belong to malicious third-parties.
-Therefore, no sensitive or session information should be stored in the
-client-side storage.
+Therefore, no sensitive or session information
+should be stored in the client-side storage.
 
 == Findings
 
