--- a/airs/content/blog/hevd-dos/index.adoc
+++ b/airs/content/blog/hevd-dos/index.adoc
@@ -6,7 +6,7 @@
 :image: cover.png
 :alt: Photo by Chaozzy Lin on Unsplash
 :description: This article will be the first approach to start exploting HackSys Extremely Vulnerable Driver with a Denial of Service
-:keywords: Bussiness, Information, Security, Protection, Hacking, Exploit, OSEE, Ethical Hacking, Pentesting
+:keywords: Business, Information, Security, Protection, Hacking, Exploit, OSEE, Ethical Hacking, Pentesting
 :author: Andres Roldan
 :writer: aroldan
 :name: Andres Roldan
