--- a/airs/content/blog/hevd-privilege-escalation/index.adoc
+++ b/airs/content/blog/hevd-privilege-escalation/index.adoc
@@ -6,7 +6,7 @@
 :image: cover.png
 :alt: Photo by Christina @ wocintechchat.com on Unsplash
 :description: In this article we will be able to perform a Local Privilege Escalation using an exploit to HEVD
-:keywords: Bussiness, Information, Security, Protection, Hacking, Exploit, OSEE, Ethical Hacking, Pentesting
+:keywords: Business, Information, Security, Protection, Hacking, Exploit, OSEE, Ethical Hacking, Pentesting
 :author: Andres Roldan
 :writer: aroldan
 :name: Andres Roldan
