--- a/airs/content/blog/hevd-smep-bypass/index.adoc
+++ b/airs/content/blog/hevd-smep-bypass/index.adoc
@@ -6,7 +6,7 @@
 :image: cover.png
 :alt: Photo by Michael Dziedzic on Unsplash
 :description: In this article we will defeat some protections using several techniques for exploting HackSys Extremely Vulnerable Driver
-:keywords: Bussiness, Information, Security, Protection, Hacking, Exploit, OSEE, Ethical Hacking, Pentesting
+:keywords: Business, Information, Security, Protection, Hacking, Exploit, OSEE, Ethical Hacking, Pentesting
 :author: Andres Roldan
 :writer: aroldan
 :name: Andres Roldan
