--- a/airs/content/blog/osce-journey/index.adoc
+++ b/airs/content/blog/osce-journey/index.adoc
@@ -6,7 +6,7 @@
 :image: cover.png
 :alt: Photo by Joshua Earle on Unsplash
 :description: This post will describe the journey that I took to earn the OSCE certification.
-:keywords: Bussiness, Information, Security, Protection, Hacking, Vulnerability, Exploit, OSCE
+:keywords: Business, Information, Security, Protection, Hacking, Vulnerability, Exploit, OSCE
 :author: Andres Roldan
 :writer: aroldan
 :name: Andres Roldan
