--- a/airs/content/blog/understanding-dep/index.adoc
+++ b/airs/content/blog/understanding-dep/index.adoc
@@ -6,7 +6,7 @@
 :image: cover.png
 :alt: Photo by Chris Panas on Unsplash
 :description: This post will show how the Data Execution Prevention (DEP) security mechanism works and what are the implication for exploit development.
-:keywords: Bussiness, Information, Security, Protection, Hacking, Exploit, OSEE, Ethical Hacking, Pentesting
+:keywords: Business, Information, Security, Protection, Hacking, Exploit, OSEE, Ethical Hacking, Pentesting
 :author: Andres Roldan
 :writer: aroldan
 :name: Andres Roldan
