--- a/airs/content/blog/vulnserver-kstet-alternative/index.adoc
+++ b/airs/content/blog/vulnserver-kstet-alternative/index.adoc
@@ -6,7 +6,7 @@
 :image: cover.png
 :alt: Photo by Philipp Katzenberger on Unsplash
 :description: This post will show how to exploit the Vulnserver KSTET command loading the payload from an external source.
-:keywords: Bussiness, Information, Security, Protection, Hacking, Exploit, OSCE, Ethical Hacking, Pentesting
+:keywords: Business, Information, Security, Protection, Hacking, Exploit, OSCE, Ethical Hacking, Pentesting
 :author: Andres Roldan
 :writer: aroldan
 :name: Andres Roldan
