--- a/airs/content/blog/windows-kernel-debugging/index.adoc
+++ b/airs/content/blog/windows-kernel-debugging/index.adoc
@@ -6,7 +6,7 @@
 :image: cover.png
 :alt: Photo by Wesley Caribe on Unsplash
 :description: This post will guide you to setup a lab environment for start exploiting Windows Kernel drivers
-:keywords: Bussiness, Information, Security, Protection, Hacking, Exploit, OSEE, Ethical Hacking, Pentesting
+:keywords: Business, Information, Security, Protection, Hacking, Exploit, OSEE, Ethical Hacking, Pentesting
 :author: Andres Roldan
 :writer: aroldan
 :name: Andres Roldan
