--- a/airs/content/pages/products/rules/list/source/157/index.adoc
+++ b/airs/content/pages/products/rules/list/source/157/index.adoc
@@ -8,7 +8,7 @@
 
 == Requirement
 
-The organization should set its parsers, linters, compilers, and interpreters
+The organization should set its parsers, linters, compilers and interpreters
 to run in strict mode.
 
 == References
