--- a/airs/content/pages/products/rules/list/source/167/index.adoc
+++ b/airs/content/pages/products/rules/list/source/167/index.adoc
@@ -9,7 +9,7 @@
 == Requirement
 
 The source code must implement mechanisms
-to ensure the closure of any unused open resource.
+to ensure the closure of any unused open resources.
 
 == References
 
