--- a/airs/content/pages/products/rules/list/source/342/index.adoc
+++ b/airs/content/pages/products/rules/list/source/342/index.adoc
@@ -9,7 +9,8 @@
 == Requirement
 
 The system must validate the content and length of all request
-parameters (*GET*, *POST*, cookies, headers, etc.) and the amount of them.
+parameters (*GET*, *POST*, cookies, headers, etc.),
+as well as their amount.
 
 == Description
 
