--- a/airs/content/pages/products/rules/list/system/273/index.adoc
+++ b/airs/content/pages/products/rules/list/system/273/index.adoc
@@ -9,7 +9,7 @@
 == Requirement
 
 All the workstations in production
-must count with an unalterable security suite
+must have an unalterable security suite
 (Anti-virus, *Antispyware*, *Host Firewall*, *Host-IDS*, *Host-IPS*).
 
 == Findings
