airs\fix(front): #3535 center images
- Center table with images in the Breaking the Build's page


Former-commit-id: 41e2c59e3422d1bc0116c75ad61d34a84b43981e

--- a/airs/content/pages/about-us/events/breaking-the-build/index.adoc
+++ b/airs/content/pages/about-us/events/breaking-the-build/index.adoc
@@ -36,7 +36,7 @@ and generate value for our customers on a daily basis,
 but also to increase the security of our production deployments.
 Thereby, we have been able to reach the following average rates:
 
-[role="tb-alt"]
+[role="tb-alt center"]
 [frame="none",cols=2,caption=""]
 |====
 a|[caption=""]
